--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
-    "dev": "webpack-dev-server --content-base build/"
+    "dev": "webpack-dev-server --content-base build/",
+    "server": "nodemon ./backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,14 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.36.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "nodemon": "^1.19.1"
   }
 }
