--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
+    "mongoose": "^5.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.36.1"
