--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.5",
     "react": "^16.8.6",
